# Shannon

./: .gitignore  AGENTS.md  LICENSE  README.md  cli.md  cli.py  main.py  pyproject.toml
.obsidian/: workspace.json
.obsidian/plugins/obsidian-git/: data.json
10_Papers/mHC Manifold-Constrained Hyper-Connections/: Paper.md
Meta/: config.ini
Meta/cli/: util.py
docs/: UI_visualization.md  architecture.md  core_module_summary.md  database_schema.md  directory_summary.md  user_flow.md
scripts/: install.sh
src/cli/: __init__.py  commands.py  github_auth.py
src/config/: constants.py  settings.py
src/core/: __init__.py  base.py  events.py  protocols.py  results.py  types.py
src/database/: connection.py
src/domain/models/: page.py
src/git/: manager.py
src/llm/: __init__.py  client.py  config.py
src/llm/cache/: response_cache.py
src/llm/extractors/: algorithm.py  base.py  citation.py  formula.py  paper.py  section.py
src/llm/processors/: chunker.py  context.py  pdf_parser.py
src/llm/prompts/: extraction.py  structuring.py  summerization.py  templates.py
src/services/: extraction_service.py
src/shannon/: __main__.py  app.py
src/tui/: app.py
src/tui/screens/: base.py
