[project]
name = "shannon"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Mashkin",email = "ivan.mashkin2018@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "typer (>=0.21.0,<0.22.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "rich (>=14.2.0,<15.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false