[project]
name = "shannon"
version = "0.1.0"
description = "Collaborative knowledge management for academic papers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Ivan Mashkin", email = "ivan_mashkin2018@gmail.com" }
]
keywords = ["academic", "papers", "notes", "knowledge-management", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "textual>=0.50.0",           # TUI framework
    "gitpython>=3.1.0",          # Git operations
    "tantivy>=0.22.0",           # Full-text search
    "pydantic>=2.0.0",           # Data validation & settings
    "pydantic-settings>=2.0.0", # Settings management
    "httpx>=0.27.0",             # Async HTTP for OpenReview API
    "rich>=13.0.0",              # Rich text formatting
    "typer>=0.12.0",             # CLI commands
    "fixit>=2.0.0",              # Linting
    "libcst>=1.0.0",             # Required by fixit
    "tomli>=2.0.0",              # TOML parsing (config)
    "tomli-w>=1.0.0",            # TOML writing
    "keyring>=25.0.0",           # Secure credential storage
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
shannon = "shannon.app:main"

[project.urls]
Homepage = "https://github.com/yourusername/shannon"
Repository = "https://github.com/yourusername/shannon"
Documentation = "https://github.com/yourusername/shannon#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shannon"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/shannon"]
branch = true
